# karva-benchmark-1

./: .gitignore  CLAUDE.md  pyproject.toml
src/finlib/: __init__.py  amortization.py  bonds.py  currency.py  interest.py  montecarlo.py  options.py  portfolio.py  risk.py  statistics.py
tests/: conftest.py  test_amortization.py  test_amortization_mega.py  test_bonds.py  test_bonds_extended.py  test_bonds_mega.py  test_currency.py  test_currency_mega.py  test_interest.py  test_interest_mega.py  test_montecarlo.py  test_montecarlo_extended.py  test_montecarlo_mega.py  test_options.py  test_options_extended.py  test_options_mega.py  test_portfolio.py  test_portfolio_mega.py  test_risk.py  test_risk_extended.py  test_risk_mega.py  test_statistics.py  test_statistics_extended.py  test_statistics_mega.py
