[project]
name = "finlib"
version = "0.1.0"
description = "Financial Calculations Library for benchmarking test runners"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finlib"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RUF", # Ruff specific rules
    "UP", # pyupgrade
]
ignore = [
    # These are all enforced by, or incompatible with, the ruff formatter:
    "E501",
    # It's often necessary to compare types instead of using isinstance()
    "E721",
    "RUF005",
    # TODO check operator precedence
    "RUF021",
]
unfixable = [
    "F841",    # unused variable. ruff keeps the call, but mostly we want to get rid of it all
    "F601",    # automatic fix might obscure issue
    "F602",    # automatic fix might obscure issue
    "B018",    # automatic fix might obscure issue
    "PLW1510", # automatic fix might obscure issue
    "RUF017",  # Ruff's fix is faster, but I prefer using itertools.chain_from_iterable
]

fixable = ["ALL"]
